--- a/dream.ipynb
+++ b/dream.ipynb
@@ -239,14 +239,15 @@
       "id": "QrcdU-lmOZNx"
      },
      "source": [
-      "Now we are ready to let the neural network reveal its dreams! Let's take a [cloud image](https://commons.wikimedia.org/wiki/File:Appearance_of_sky_for_weather_forecast,_Dhaka,_Bangladesh.JPG) as a starting point:"
+      "Now we are ready to let the neural network reveal its dreams! Let's take a [cloud image](https://commons.wikimedia.org/wiki/File:Appearance_of_sky_for_weather_forecast,_Dhaka,_Bangladesh
+      ) as a starting point:"
      ]
     },
     {
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "img = np.float32(PIL.Image.open('sky1024px.jpg'))\n",
+      "img = np.float32(PIL.Image.open('cow.jpg'))\n",
       "showarray(img)"
      ],
      "language": "python",
