--- a/dream.ipynb
+++ b/dream.ipynb
@@ -247,7 +247,7 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "img = np.float32(PIL.Image.open('cow.jpg'))\n",
+      "img = np.float32(PIL.Image.open('sky1024px.jpg'))\n",
       "showarray(img)"
      ],
      "language": "python",
