--- a/dream.ipynb
+++ b/dream.ipynb
@@ -239,8 +239,7 @@
       "id": "QrcdU-lmOZNx"
      },
      "source": [
-      "Now we are ready to let the neural network reveal its dreams! Let's take a [cloud image](https://commons.wikimedia.org/wiki/File:Appearance_of_sky_for_weather_forecast,_Dhaka,_Bangladesh
-      ) as a starting point:"
+      "Now we are ready to let the neural network reveal its dreams! Let's take a [cloud image](https://commons.wikimedia.org/wiki/File:Appearance_of_sky_for_weather_forecast,_Dhaka,_Bangladesh.JPG) as a starting point:"
      ]
     },
     {
